--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.81:3.3": "Da gingen einige Mönche und Nonnen zum Ehrwürdigen Ānanda und tauschten Willkommensgrüße mit ihm aus. ",
   "sn22.81:3.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: ",
   "sn22.81:3.5": "„Werter Ānanda, es ist lange her, dass wir vom Buddha einen Dhammavortrag gehört haben. ",
-  "sn22.81:3.6": "Wir würden gerne einen Dhammavortrag vom Buddha hören.“ "
+  "sn22.81:3.6": "Wir würden gerne einen Dhammavortrag vom Buddha hören.“ ",
+  "sn22.81:4.1": "Da ging der Ehrwürdige Ānanda zusammen mit diesen Mönchen und Nonnen nach Pārileyya, um den Buddha zu sehen. Sie verbeugten sich und setzten sich zur Seite hin, "
 }
