--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.81:3.5": "„Werter Ānanda, es ist lange her, dass wir vom Buddha einen Dhammavortrag gehört haben. ",
   "sn22.81:3.6": "Wir würden gerne einen Dhammavortrag vom Buddha hören.“ ",
   "sn22.81:4.1": "Da ging der Ehrwürdige Ānanda zusammen mit diesen Mönchen und Nonnen nach Pārileyya, um den Buddha zu sehen. Sie verbeugten sich und setzten sich zur Seite hin, ",
-  "sn22.81:4.2": "und der Buddha leitete sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. "
+  "sn22.81:4.2": "und der Buddha leitete sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. ",
+  "sn22.81:4.3": "Da kam zu dieser zeit einem der Mönche dieser Gedanke in den Sinn: "
 }
