Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.81:4.4": "„Wie soll man erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?“ ",
   "sn22.81:4.5": "Da erkannte der Buddha, was dieser Mönch dachte, und wandte sich an die Mönche und Nonnen: ",
   "sn22.81:4.6": "„Mönche und Nonnen, ich habe den Dhamma durch Aufgliederung gelehrt. ",
-  "sn22.81:4.7": "Durch Aufgliederung habe ich die vier Arten der Achtsamkeitsmeditation gelehrt, "
+  "sn22.81:4.7": "Durch Aufgliederung habe ich die vier Arten der Achtsamkeitsmeditation gelehrt, ",
+  "sn22.81:4.8": "die vier Arten des rechten Bemühens, "
 }
