--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.81:4.9": "die vier Grundlagen der Wunderkräfte, ",
   "sn22.81:4.10": "die fünf Fähigkeiten, ",
   "sn22.81:4.11": "die fünf Kräfte, ",
-  "sn22.81:4.12": "die sieben Faktoren des Erwachens "
+  "sn22.81:4.12": "die sieben Faktoren des Erwachens ",
+  "sn22.81:4.13": "und den edlen achtfachen Pfad. "
 }
