Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.81:4.10": "die fünf Fähigkeiten, ",
   "sn22.81:4.11": "die fünf Kräfte, ",
   "sn22.81:4.12": "die sieben Faktoren des Erwachens ",
-  "sn22.81:4.13": "und den edlen achtfachen Pfad. "
+  "sn22.81:4.13": "und den edlen achtfachen Pfad. ",
+  "sn22.81:4.14": "So habe ich den Dhamma durch Aufgliederung gelehrt. "
 }
