Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -29,5 +29,5 @@
   "sn22.81:4.13": "und den edlen achtfachen Pfad. ",
   "sn22.81:4.14": "So habe ich den Dhamma durch Aufgliederung gelehrt. ",
   "sn22.81:4.15": "Obwohl ich den Dhamma durch Aufgliederung gelehrt habe, kommt einem gewissen Mönch, der hier anwesend ist, dieser Gedanke in den Sinn: ",
-  "sn22.81:4.16": "‚Wie soll man erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?‘ "
+  "sn22.81:4.16": "‚Wie erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden?‘ "
 }
