--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.81:4.15": "Obwohl ich den Dhamma durch Aufgliederung gelehrt habe, kommt einem gewissen Mönch, der hier anwesend ist, dieser Gedanke in den Sinn: ",
   "sn22.81:4.16": "‚Wie erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden?‘ ",
   "sn22.81:5.1": "Und wie, Mönche und Nonnen, erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden? ",
-  "sn22.81:5.2": "Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. "
+  "sn22.81:5.2": "Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
+  "sn22.81:5.3": "Er betrachtet Form als das Selbst. "
 }
