--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.81:5.6": "Wenn ein ungebildeter gewöhnlicher Mensch unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, entsteht Verlangen. ",
   "sn22.81:5.7": "Daraus wird diese bedingte Erscheinung geboren. ",
   "sn22.81:5.8": "So ist diese bedingte Erscheinung unbeständig, bedingt und abhängig entstanden. ",
-  "sn22.81:5.9": "Und auch dieses Verlangen, "
+  "sn22.81:5.9": "Und auch dieses Verlangen, ",
+  "sn22.81:5.10": "dieses Gefühl, diese Berührung, "
 }
