--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.81:5.10": "dieses Gefühl, diese Berührung, ",
   "sn22.81:5.11": "und diese Unwissenheit sind unbeständig, bedingt und abhängig entstanden. ",
   "sn22.81:5.12": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
-  "sn22.81:6.1": "Vielleicht betrachtet er Form nicht als das Selbst, "
+  "sn22.81:6.1": "Vielleicht betrachtet er Form nicht als das Selbst, ",
+  "sn22.81:6.2": "aber doch das Selbst als etwas, das Form hat. "
 }
