--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.81:5.12": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
   "sn22.81:6.1": "Vielleicht betrachtet er Form nicht als das Selbst, ",
   "sn22.81:6.2": "aber doch das Selbst als etwas, das Form hat. ",
-  "sn22.81:6.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … "
+  "sn22.81:6.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … ",
+  "sn22.81:7.1": "Vielleicht betrachtet er Form nicht als das Selbst, das Selbst nicht als etwas, das Form hat, "
 }
