Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -48,5 +48,5 @@
   "sn22.81:7.1": "Vielleicht betrachtet er nicht Form als das Selbst oder das Selbst als etwas, das Form hat, ",
   "sn22.81:7.2": "aber doch Form als im Selbst. ",
   "sn22.81:7.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … ",
-  "sn22.81:8.1": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat oder Form als im Selbst, "
+  "sn22.81:8.1": "Vielleicht betrachtet er nicht Form als das Selbst, das Selbst als etwas, das Form hat oder Form als im Selbst, "
 }
