Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.81:7.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … ",
   "sn22.81:8.1": "Vielleicht betrachtet er nicht Form als das Selbst, das Selbst als etwas, das Form hat oder Form als im Selbst, ",
   "sn22.81:8.2": "aber doch das Selbst als in der Form. ",
-  "sn22.81:8.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … "
+  "sn22.81:8.3": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. … ",
+  "sn22.81:9.1": "Vielleicht betrachtet er nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
 }
