Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn22.81:9.1": "Vielleicht betrachtet er nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.81:9.2": "Aber er betrachtet Gefühl als das Selbst … ",
   "sn22.81:9.3": "er betrachtet Wahrnehmung als das Selbst … ",
-  "sn22.81:9.4": "er betrachtet Entscheidungen als das Selbst … "
+  "sn22.81:9.4": "er betrachtet Entscheidungen als das Selbst … ",
+  "sn22.81:9.5": "er betrachtet Bewusstsein als das Selbst … "
 }
