Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.81:9.3": "er betrachtet Wahrnehmung als das Selbst … ",
   "sn22.81:9.4": "er betrachtet Entscheidungen als das Selbst … ",
   "sn22.81:9.5": "er betrachtet Bewusstsein als das Selbst … ",
-  "sn22.81:9.6": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. "
+  "sn22.81:9.6": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. ",
+  "sn22.81:9.7": "Und was ist die Quelle, der Ursprung, die Wiege und die Herkunft dieser bedingten Erscheinung? "
 }
