--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn22.81:9.6": "Aber dieses Betrachten ist bloß eine bedingte Erscheinung. ",
   "sn22.81:9.7": "Und was ist die Quelle, der Ursprung, die Wiege und die Herkunft dieser bedingten Erscheinung? ",
   "sn22.81:9.8": "Wenn ein ungebildeter gewöhnlicher Mensch unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, entsteht Verlangen. ",
-  "sn22.81:9.9": "Daraus wird diese bedingte Erscheinung geboren. "
+  "sn22.81:9.9": "Daraus wird diese bedingte Erscheinung geboren. ",
+  "sn22.81:9.10": "So ist diese bedingte Erscheinung unbeständig, bedingt und abhängig entstanden. "
 }
