--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn22.81:9.8": "Wenn ein ungebildeter gewöhnlicher Mensch unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, entsteht Verlangen. ",
   "sn22.81:9.9": "Daraus wird diese bedingte Erscheinung geboren. ",
   "sn22.81:9.10": "So ist diese bedingte Erscheinung unbeständig, bedingt und abhängig entstanden. ",
-  "sn22.81:9.11": "Und auch dieses Verlangen, "
+  "sn22.81:9.11": "Und auch dieses Verlangen, ",
+  "sn22.81:9.12": "dieses Gefühl, "
 }
