--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "sn22.81:9.10": "So ist diese bedingte Erscheinung unbeständig, bedingt und abhängig entstanden. ",
   "sn22.81:9.11": "Und auch dieses Verlangen, ",
   "sn22.81:9.12": "dieses Gefühl, ",
-  "sn22.81:9.13": "diese Berührung, "
+  "sn22.81:9.13": "diese Berührung, ",
+  "sn22.81:9.14": "und diese Unwissenheit sind unbeständig, bedingt und abhängig entstanden. "
 }
