Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.81:9.13": "diese Berührung, ",
   "sn22.81:9.14": "und diese Unwissenheit sind unbeständig, bedingt und abhängig entstanden. ",
   "sn22.81:9.15": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
-  "sn22.81:10.1": "Vielleicht betrachtet er nicht Form "
+  "sn22.81:10.1": "Vielleicht betrachtet er nicht Form ",
+  "sn22.81:10.2": "oder Gefühl "
 }
