--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "sn22.81:9.15": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
   "sn22.81:10.1": "Vielleicht betrachtet er nicht Form ",
   "sn22.81:10.2": "oder Gefühl ",
-  "sn22.81:10.3": "oder Wahrnehmung "
+  "sn22.81:10.3": "oder Wahrnehmung ",
+  "sn22.81:10.4": "oder Entscheidungen "
 }
