--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn22.81:10.1": "Vielleicht betrachtet er nicht Form ",
   "sn22.81:10.2": "oder Gefühl ",
   "sn22.81:10.3": "oder Wahrnehmung ",
-  "sn22.81:10.4": "oder Entscheidungen "
+  "sn22.81:10.4": "oder Entscheidungen ",
+  "sn22.81:10.5": "oder Bewusstsein als das Selbst. "
 }
