Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "sn22.81:10.2": "oder Gefühl ",
   "sn22.81:10.3": "oder Wahrnehmung ",
   "sn22.81:10.4": "oder Entscheidungen ",
-  "sn22.81:10.5": "oder Bewusstsein als das Selbst. "
+  "sn22.81:10.5": "oder Bewusstsein als das Selbst. ",
+  "sn22.81:10.6": "Aber er hat doch eine solche Ansicht: "
 }
