Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn6.4:2.3": "und sagte zu ihm: ",
   "sn6.4:2.4": "„Komm, guter Herr! Willkommen, guter Herr! ",
   "sn6.4:2.5": "Es ist lange her, dass du die Gelegenheit genutzt hast, hierherzukommen. ",
-  "sn6.4:2.6": "Denn dies ist beständig, dies ist immerwährend, dies ist ewig, dies ist vollständig, dies ist unvergänglich. Denn hier gibt es kein Geborenwerden, kein Altern, kein Sterben, kein Verscheiden und kein Wiedergeborenwerden. Und es gibt kein anderes Entrinnen über dieses hinaus.“ ",
+  "sn6.4:2.6": "Denn dies ist beständig, dies ist immerwährend, dies ist ewig, dies ist vollständig, dies muss nicht vergehen. Denn hier gibt es kein Geborenwerden, kein Altern, kein Sterben, kein Verscheiden und kein Wiedergeborenwerden. Und es gibt kein anderes Entrinnen über dieses hinaus.“ ",
   "sn6.4:3.1": "Darauf sagte der Buddha zu ihm: ",
   "sn6.4:3.2": "„Ach, der Brahmā Baka ist in Unwissenheit verloren! Ach, der Brahmā Baka ist in Unwissenheit verloren! ",
   "sn6.4:3.3": "Denn von dem, was tatsächlich unbeständig ist, nicht fortwährt, was zeitlich, unvollständig und vergänglich ist, sagt er, es sei beständig, immerwährend, ewig, vollständig und unvergänglich. ",
