Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn6/sn6.4_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "sn6.4:2.6": "Denn dies ist beständig, dies ist immerwährend, dies ist ewig, dies ist vollständig, dies muss nicht vergehen. Denn hier gibt es kein Geborenwerden, kein Altern, kein Sterben, kein Verscheiden und kein Wiedergeborenwerden. Und es gibt kein anderes Entrinnen über dieses hinaus.“ ",
   "sn6.4:3.1": "Darauf sagte der Buddha zu ihm: ",
   "sn6.4:3.2": "„Ach, der Brahmā Baka ist in Unwissenheit verloren! Ach, der Brahmā Baka ist in Unwissenheit verloren! ",
-  "sn6.4:3.3": "Denn von dem, was tatsächlich unbeständig ist, nicht fortwährt, was zeitlich, unvollständig und vergänglich ist, sagt er, es sei beständig, immerwährend, ewig, vollständig und unvergänglich. ",
+  "sn6.4:3.3": "Denn von dem, was tatsächlich unbeständig ist, nicht fortwährt, was zeitlich, unvollständig und vergehen muss ist, sagt er, es sei beständig, immerwährend, ewig, vollständig und müsse nicht vergehen. ",
   "sn6.4:3.4": "Und da, wo es Geborenwerden, Altern, Sterben, Verscheiden und Wiedergeborenwerden gibt, da sagt er, ",
   "sn6.4:3.5": "es gebe kein Geborenwerden, kein Altern, kein Sterben, kein Verscheiden und kein Wiedergeborenwerden. ",
   "sn6.4:3.6": "Und obwohl es ein anderes Entrinnen über dieses hinaus gibt, sagt er, es gebe kein anderes Entrinnen über dieses hinaus.“ ",
