Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "sn22.81:10.4": "oder Entscheidungen ",
   "sn22.81:10.5": "oder Bewusstsein als das Selbst. ",
   "sn22.81:10.6": "Aber er hat doch eine solche Ansicht: ",
-  "sn22.81:10.7": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein.‘ "
+  "sn22.81:10.7": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein.‘ ",
+  "sn22.81:10.8": "Aber diese Ewigkeitsansicht ist bloß eine bedingte Erscheinung. "
 }
