--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -76,5 +76,6 @@
   "sn22.81:10.8": "Aber diese Ewigkeitsansicht ist bloß eine bedingte Erscheinung. ",
   "sn22.81:10.9": "Und was ist die Quelle dieser bedingten Erscheinung? … ",
   "sn22.81:10.10": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
-  "sn22.81:11.1": "Vielleicht betrachtet er nicht Form "
+  "sn22.81:11.1": "Vielleicht betrachtet er nicht Form ",
+  "sn22.81:11.2": "oder Gefühl "
 }
