Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "sn22.81:10.10": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
   "sn22.81:11.1": "Vielleicht betrachtet er nicht Form ",
   "sn22.81:11.2": "oder Gefühl ",
-  "sn22.81:11.3": "oder Wahrnehmung "
+  "sn22.81:11.3": "oder Wahrnehmung ",
+  "sn22.81:11.4": "oder Entscheidungen "
 }
