--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "sn22.81:11.1": "Vielleicht betrachtet er nicht Form ",
   "sn22.81:11.2": "oder Gefühl ",
   "sn22.81:11.3": "oder Wahrnehmung ",
-  "sn22.81:11.4": "oder Entscheidungen "
+  "sn22.81:11.4": "oder Entscheidungen ",
+  "sn22.81:11.5": "oder Bewusstsein als das Selbst. "
 }
