--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "sn22.81:11.3": "oder Wahrnehmung ",
   "sn22.81:11.4": "oder Entscheidungen ",
   "sn22.81:11.5": "oder Bewusstsein als das Selbst, ",
-  "sn22.81:11.6": "noch hat er eine solche Ansicht: "
+  "sn22.81:11.6": "noch hat er eine solche Ansicht: ",
+  "sn22.81:11.7": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein.‘ "
 }
