Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -83,5 +83,6 @@
   "sn22.81:11.5": "oder Bewusstsein als das Selbst, ",
   "sn22.81:11.6": "noch hat er eine solche Ansicht: ",
   "sn22.81:11.7": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein.‘ ",
-  "sn22.81:11.8": "Aber er hat doch eine solche Ansicht: "
+  "sn22.81:11.8": "Aber er hat doch eine solche Ansicht: ",
+  "sn22.81:11.9": "‚Ich könnte nicht sein, und es könnte nicht mein sein. Ich werde nicht sein, und es wird nicht mein sein.‘ "
 }
