--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -85,5 +85,6 @@
   "sn22.81:11.7": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein.‘ ",
   "sn22.81:11.8": "Aber er hat doch eine solche Ansicht: ",
   "sn22.81:11.9": "‚Ich könnte nicht sein, und es könnte nicht mein sein. Ich werde nicht sein, und es wird nicht mein sein.‘ ",
-  "sn22.81:11.10": "Aber diese Vernichtungsansicht ist bloß eine bedingte Erscheinung. "
+  "sn22.81:11.10": "Aber diese Vernichtungsansicht ist bloß eine bedingte Erscheinung. ",
+  "sn22.81:11.11": "Und was ist die Quelle dieser bedingten Erscheinung? … "
 }
