--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -88,5 +88,5 @@
   "sn22.81:11.10": "Aber diese Vernichtungsansicht ist bloß eine bedingte Erscheinung. ",
   "sn22.81:11.11": "Und was ist die Quelle dieser bedingten Erscheinung? … ",
   "sn22.81:11.15": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
-  "sn22.81:12.1": "Vielleicht betrachtet er nicht Form "
+  "sn22.81:12.1": "Vielleicht betrachtet er nicht Form oder Gefühl "
 }
