Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -89,5 +89,6 @@
   "sn22.81:11.11": "Und was ist die Quelle dieser bedingten Erscheinung? … ",
   "sn22.81:11.15": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
   "sn22.81:12.1": "Vielleicht betrachtet er nicht Form oder Gefühl ",
-  "sn22.81:12.2": "oder Wahrnehmung "
+  "sn22.81:12.2": "oder Wahrnehmung ",
+  "sn22.81:12.3": "oder Entscheidungen "
 }
