--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -90,5 +90,6 @@
   "sn22.81:11.15": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden. ",
   "sn22.81:12.1": "Vielleicht betrachtet er nicht Form oder Gefühl ",
   "sn22.81:12.2": "oder Wahrnehmung ",
-  "sn22.81:12.3": "oder Entscheidungen "
+  "sn22.81:12.3": "oder Entscheidungen ",
+  "sn22.81:12.4": "oder Bewusstsein als das Selbst, "
 }
