Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "sn22.81:12.1": "Vielleicht betrachtet er nicht Form oder Gefühl ",
   "sn22.81:12.2": "oder Wahrnehmung ",
   "sn22.81:12.3": "oder Entscheidungen ",
-  "sn22.81:12.4": "oder Bewusstsein als das Selbst, "
+  "sn22.81:12.4": "oder Bewusstsein als das Selbst, ",
+  "sn22.81:12.5": "noch hat er eine solche Ansicht: "
 }
