--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "sn22.81:12.4": "oder Bewusstsein als das Selbst, ",
   "sn22.81:12.5": "noch hat er eine solche Ansicht: ",
   "sn22.81:12.6": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein‘, ",
-  "sn22.81:12.7": "noch hat er eine solche Ansicht: "
+  "sn22.81:12.7": "noch hat er eine solche Ansicht: ",
+  "sn22.81:12.8": "‚Ich könnte nicht sein, und es könnte nicht mein sein. Ich werde nicht sein, und es wird nicht mein sein.‘ "
 }
