--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -96,5 +96,6 @@
   "sn22.81:12.6": "‚Das Selbst und das Weltall sind ein und dasselbe. Nachdem ich gestorben bin, werde ich beständig, immerwährend, ewig und unvergänglich sein‘, ",
   "sn22.81:12.7": "noch hat er eine solche Ansicht: ",
   "sn22.81:12.8": "‚Ich könnte nicht sein, und es könnte nicht mein sein. Ich werde nicht sein, und es wird nicht mein sein.‘ ",
-  "sn22.81:12.9": "Aber er hat doch Zweifel, ist unsicher und unentschlossen über die wahre Lehre. "
+  "sn22.81:12.9": "Aber er hat doch Zweifel, ist unsicher und unentschlossen über die wahre Lehre. ",
+  "sn22.81:12.10": "Aber dieser Zweifel, diese Unsicherheit und Unentschlossenheit über die wahre Lehre sind bloß bedingte Erscheinungen. "
 }
