--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -100,5 +100,5 @@
   "sn22.81:12.10": "Aber dieser Zweifel, diese Unsicherheit und Unentschlossenheit über die wahre Lehre ist bloß eine bedingte Erscheinung. ",
   "sn22.81:12.11": "Und was ist die Quelle, der Ursprung, die Wiege und die Herkunft dieser bedingten Erscheinung? ",
   "sn22.81:12.12": "Wenn ein ungebildeter gewöhnlicher Mensch unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, entsteht Verlangen. ",
-  "sn22.81:12.13": "Daraus werden diese bedingten Erscheinungen geboren. "
+  "sn22.81:12.13": "Daraus wird diese bedingte Erscheinung geboren. "
 }
