--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -102,5 +102,6 @@
   "sn22.81:12.12": "Wenn ein ungebildeter gewöhnlicher Mensch unwissend von Gefühlen getroffen wird, die aus Berührung entsprungen sind, entsteht Verlangen. ",
   "sn22.81:12.13": "Daraus wird diese bedingte Erscheinung geboren. ",
   "sn22.81:12.14": "So ist diese bedingte Erscheinung unbeständig, bedingt und abhängig entstanden. ",
-  "sn22.81:12.15": "Und auch dieses Verlangen, "
+  "sn22.81:12.15": "Und auch dieses Verlangen, ",
+  "sn22.81:12.16": "dieses Gefühl, "
 }
