--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -105,5 +105,6 @@
   "sn22.81:12.15": "Und auch dieses Verlangen, ",
   "sn22.81:12.16": "dieses Gefühl, ",
   "sn22.81:12.17": "diese Berührung ",
-  "sn22.81:12.18": "und diese Unwissenheit sind unbeständig, bedingt und abhängig entstanden. "
+  "sn22.81:12.18": "und diese Unwissenheit sind unbeständig, bedingt und abhängig entstanden. ",
+  "sn22.81:12.19": "So erkennt und sieht man, sodass die Befleckungen in diesem Leben aufgelöst werden.“ "
 }
