--- a/translation/en/sujato/sutta/kn/kp/kp9_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/kp/kp9_translation-en-sujato.json
@@ -19,7 +19,7 @@
   "kp9:4.4": "medium, small, tiny or round, ",
   "kp9:5.1": "visible or invisible, ",
   "kp9:5.2": "living far or near, ",
-  "kp9:5.3": "those born or to be born: ",
+  "kp9:5.3": "those born or to be born—",
   "kp9:5.4": "May all beings be happy! ",
   "kp9:6.1": "Let none turn from another, ",
   "kp9:6.2": "nor look down on anyone anywhere. ",
