--- a/translation/en/sujato/sutta/kn/kp/kp9_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/kp/kp9_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "kp9:7.3": "so too for all creatures ",
   "kp9:7.4": "unfold a boundless heart. ",
   "kp9:8.1": "With love for the whole world, ",
-  "kp9:8.2": "unfold a boundless heart. ",
+  "kp9:8.2": "unfold a boundless heart:",
   "kp9:8.3": "Above, below, all round, ",
   "kp9:8.4": "unconstricted, without enemy or foe. ",
   "kp9:9.1": "When standing, walking, sitting, ",
