--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -616,6 +616,7 @@
   "pli-tv-kd12:9.1.75": "The chapter on those on probation is finished. ",
   "pli-tv-kd12:9.1.76": "In this chapter there are five topics. ",
   "pli-tv-kd12:9.1.77": "This is the summary: ",
-  "pli-tv-kd12:9.1.78": "“",
+  "pli-tv-kd12:9.1.78": "“Those on probation consented to ",
+  "pli-tv-kd12:9.1.79": "The regular monks ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
