Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -618,5 +618,11 @@
   "pli-tv-kd12:9.1.77": "This is the summary: ",
   "pli-tv-kd12:9.1.78": "“Those on probation consented to ",
   "pli-tv-kd12:9.1.79": "The regular monks ",
+  "pli-tv-kd12:9.1.80": "Bowing down to them, standing up, ",
+  "pli-tv-kd12:9.1.81": "And raising their joint palms, acting respectfully. ",
+  "pli-tv-kd12:9.1.82": "Offering a seat, a bed, ",
+  "pli-tv-kd12:9.1.83": "Foot, stool, scraper; ",
+  "pli-tv-kd12:9.1.84": "Bowl, massaging when bathing, ",
+  "pli-tv-kd12:9.1.85": "And the good monk criticized them. ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
