Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -624,5 +624,11 @@
   "pli-tv-kd12:9.1.83": "Foot, stool, scraper; ",
   "pli-tv-kd12:9.1.84": "Bowl, massaging when bathing, ",
   "pli-tv-kd12:9.1.85": "And the good monk criticized them. ",
+  "pli-tv-kd12:9.1.86": "Wrong conduct for one who consents, ",
+  "pli-tv-kd12:9.1.87": "Mutual, five things according to seniority; ",
+  "pli-tv-kd12:9.1.88": "The observance day, the invitation ceremony, ",
+  "pli-tv-kd12:9.1.89": "Rainy-season robes, invitations, meals. ",
+  "pli-tv-kd12:9.1.90": "And proper conduct there, ",
+  "pli-tv-kd12:9.1.91": "Walking in front of a regular one; ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
