Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -630,5 +630,11 @@
   "pli-tv-kd12:9.1.89": "Rainy-season robes, invitations, meals. ",
   "pli-tv-kd12:9.1.90": "And proper conduct there, ",
   "pli-tv-kd12:9.1.91": "Walking in front of a regular one; ",
+  "pli-tv-kd12:9.1.92": "And whatever is the last, ",
+  "pli-tv-kd12:9.1.93": "And just so attending on. ",
+  "pli-tv-kd12:9.1.94": "Wilderness, alms, bringing back, ",
+  "pli-tv-kd12:9.1.95": "About new arrivals, on the observance day; ",
+  "pli-tv-kd12:9.1.96": "On the invitation day, by messenger, ",
+  "pli-tv-kd12:9.1.97": "And he may go to a place with monks. ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
