Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -636,5 +636,11 @@
   "pli-tv-kd12:9.1.95": "About new arrivals, on the observance day; ",
   "pli-tv-kd12:9.1.96": "On the invitation day, by messenger, ",
   "pli-tv-kd12:9.1.97": "And he may go to a place with monks. ",
+  "pli-tv-kd12:9.1.98": "And in the same room, getting up, ",
+  "pli-tv-kd12:9.1.99": "And just so he should invite; ",
+  "pli-tv-kd12:9.1.100": "On a seat, on a lower, on a walking path, ",
+  "pli-tv-kd12:9.1.101": "On the ground, and with walking path. ",
+  "pli-tv-kd12:9.1.102": "With one who is more senior, invalid, ",
+  "pli-tv-kd12:9.1.103": "And stop the counting, fulfilling; ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
