Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -642,5 +642,11 @@
   "pli-tv-kd12:9.1.101": "On the ground, and with walking path. ",
   "pli-tv-kd12:9.1.102": "With one who is more senior, invalid, ",
   "pli-tv-kd12:9.1.103": "And stop the counting, fulfilling; ",
+  "pli-tv-kd12:9.1.104": "Setting aside, taking up, ",
+  "pli-tv-kd12:9.1.105": "Just the duties for one on probation. ",
+  "pli-tv-kd12:9.1.106": "To the beginning, deserving the trial, ",
+  "pli-tv-kd12:9.1.107": "So those undertaking the trial; ",
+  "pli-tv-kd12:9.1.108": "And also the method for deserving rehabilitation, ",
+  "pli-tv-kd12:9.1.109": "Again putting together from the method. ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
