Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1,7 +1,7 @@
 {
   "pli-tv-kd13:0.1": "Theravāda Collection on Monastic Law ",
   "pli-tv-kd13:0.2": "The Short Division ",
-  "pli-tv-kd13:0.3": "The chapter containing the collection of processes for the clearing of offenses entailing suspension ",
+  "pli-tv-kd13:0.3": "The chapter on the processes for the clearing of offenses entailing suspension ",
   "pli-tv-kd13:0.4": "1. Emission of semen ",
   "pli-tv-kd13:1.1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
   "pli-tv-kd13:1.1.2": "At that time Venerable Udāyī had committed one unconcealed offense of intentional emission of semen. ",
