Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -12,9 +12,9 @@
   "pli-tv-kd13:1.2.1": "And it should be given like this: ",
   "pli-tv-kd13:1.2.2.0": "1.1 Trial periods for those with unconcealed offenses ",
   "pli-tv-kd13:1.2.2.1": "“The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
-  "pli-tv-kd13:1.2.3": "‘Venerables, I have committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:1.2.3": "‘Venerables, I’ve committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.2.4": "I ask the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.2.5": "I have committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:1.2.5": "I’ve committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.2.6": "For the second time I ask the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:1.2.7": "I have committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.2.8": "For the third time I ask the Sangha for the trial period of six days for that offense.’ ",
