--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -16,7 +16,7 @@
   "pli-tv-kd13:1.2.4": "I ask the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:1.2.5": "I’ve committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.2.6": "For the second time I ask the Sangha for the trial period of six days for that offense. ",
-  "pli-tv-kd13:1.2.7": "I have committed one unconcealed offense of intentional emission of semen. ",
+  "pli-tv-kd13:1.2.7": "I’ve committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:1.2.8": "For the third time I ask the Sangha for the trial period of six days for that offense.’ ",
   "pli-tv-kd13:1.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:1.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
