--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -33,7 +33,7 @@
   "pli-tv-kd13:1.3.13": "For the second time I speak on this matter. ",
   "pli-tv-kd13:1.3.14": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.15": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:1.3.16": "He is asking the Sangha for the trial period of six days for that offense. ",
+  "pli-tv-kd13:1.3.16": "He’s asking the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:1.3.17": "The Sangha gives him the trial period of six days for that offense. ",
   "pli-tv-kd13:1.3.18": "Any monk who approves of giving him the trial period of six days for that offense should remain silent. ",
   "pli-tv-kd13:1.3.19": "Any monk who doesn’t approve should speak up. ",
