--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -40,7 +40,7 @@
   "pli-tv-kd13:1.3.20": "For the third time I speak on this matter. ",
   "pli-tv-kd13:1.3.21": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:1.3.22": "The monk Udāyī has committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:1.3.23": "He is asking the Sangha for the trial period of six days for that offense. ",
+  "pli-tv-kd13:1.3.23": "He’s asking the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:1.3.24": "The Sangha gives him the trial period of six days for that offense. ",
   "pli-tv-kd13:1.3.25": "Any monk who approves of giving him the trial period of six days for that offense should remain silent. ",
   "pli-tv-kd13:1.3.26": "Any monk who doesn’t approve should speak up. ",
