--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -51,7 +51,7 @@
   "pli-tv-kd13:2.1.2": "“I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.1.3": "I asked the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:2.1.4": "The Sangha gave me the trial period, ",
-  "pli-tv-kd13:2.1.5": "and I have now completed it. ",
+  "pli-tv-kd13:2.1.5": "and I’ve now completed it. ",
   "pli-tv-kd13:2.1.6": "What should I do now?” ",
   "pli-tv-kd13:2.1.7": "They told the Buddha. ",
   "pli-tv-kd13:2.1.8": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
