--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -59,7 +59,7 @@
   "pli-tv-kd13:2.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:2.2.3": "‘Venerables, I had committed one unconcealed offense of intentional emission of semen. I asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:2.2.4": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:2.2.5": "I have now completed the trial period and I ask the Sangha for rehabilitation. ",
+  "pli-tv-kd13:2.2.5": "I’ve now completed the trial period and I ask the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.2.6": "I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.2.7": "I asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:2.2.8": "and the Sangha gave me the trial period. ",
