Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -63,7 +63,7 @@
   "pli-tv-kd13:2.2.6": "I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.2.7": "I asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:2.2.8": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:2.2.9": "I have now completed the trial period and for the second time I ask the Sangha for rehabilitation. ",
+  "pli-tv-kd13:2.2.9": "I’ve now completed the trial period and for the second time I ask the Sangha for rehabilitation. ",
   "pli-tv-kd13:2.2.10": "I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.2.11": "I asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:2.2.12": "and the Sangha gave me the trial period. ",
