Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -119,7 +119,7 @@
   "pli-tv-kd13:3.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:3.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:3.3.3": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:3.3.4": "He is asking the Sangha for probation for one day for that offense. ",
+  "pli-tv-kd13:3.3.4": "He’s asking the Sangha for probation for one day for that offense. ",
   "pli-tv-kd13:3.3.5": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
   "pli-tv-kd13:3.3.6": "This is the motion. ",
   "pli-tv-kd13:3.3.7": "Please, Venerables, I ask the Sangha to listen. ",
