Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -177,7 +177,7 @@
   "pli-tv-kd13:5.1.4": "and the Sangha gave me that probation. ",
   "pli-tv-kd13:5.1.5": "When I had completed the probation, I asked the Sangha for the trial period of six days for that offense. ",
   "pli-tv-kd13:5.1.6": "The Sangha gave me the trial period, ",
-  "pli-tv-kd13:5.1.7": "and I have now completed it. ",
+  "pli-tv-kd13:5.1.7": "and I’ve now completed it. ",
   "pli-tv-kd13:5.1.8": "What should I do now?” ",
   "pli-tv-kd13:5.1.9": "They told the Buddha. ",
   "pli-tv-kd13:5.1.10": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
