Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -239,7 +239,7 @@
   "pli-tv-kd13:6.1.21": "This is the motion. ",
   "pli-tv-kd13:6.1.22": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:6.1.23": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:6.1.24": "He is asking the Sangha for probation for five days for that offense. ",
+  "pli-tv-kd13:6.1.24": "He’s asking the Sangha for probation for five days for that offense. ",
   "pli-tv-kd13:6.1.25": "The Sangha gives him that probation. ",
   "pli-tv-kd13:6.1.26": "Any monk who approves of giving him that probation should remain silent. ",
   "pli-tv-kd13:6.1.27": "Any monk who doesn’t approve should speak up. ",
