Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -281,7 +281,7 @@
   "pli-tv-kd13:7.3.12": "He asked the Sangha for probation for five days for that offense, ",
   "pli-tv-kd13:7.3.13": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:7.3.14": "While he was on probation, he committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:7.3.15": "He is now asking the Sangha to send him back to the beginning for that offense. ",
+  "pli-tv-kd13:7.3.15": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:7.3.16": "The Sangha sends him back to the beginning. ",
   "pli-tv-kd13:7.3.17": "Any monk who approves of sending him back to the beginning should remain silent. ",
   "pli-tv-kd13:7.3.18": "Any monk who doesn’t approve should speak up. ",
