Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -445,7 +445,7 @@
   "pli-tv-kd13:12.2.22": "which it did. ",
   "pli-tv-kd13:12.2.23": "I then asked the Sangha to give me the trial period for that offense, ",
   "pli-tv-kd13:12.2.24": "which it gave me. ",
-  "pli-tv-kd13:12.2.25": "I have now completed the trial period and I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:12.2.25": "I’ve now completed the trial period and I ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:12.2.26": "And he should ask a second ",
   "pli-tv-kd13:12.2.27": "and a third time. ",
   "pli-tv-kd13:12.3.1": "A competent and capable monk should then inform the Sangha: ",
@@ -493,7 +493,7 @@
   "pli-tv-kd13:13.1.7": "And it should be given like this: ",
   "pli-tv-kd13:13.1.8": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:13.1.9": "and say: ",
-  "pli-tv-kd13:13.1.10": "‘Venerables, I have committed one offense of intentional emission of semen, concealed for a half-month. ",
+  "pli-tv-kd13:13.1.10": "‘Venerables, I’ve committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:13.1.11": "I ask the Sangha for probation for a half-month for that offense.’ ",
   "pli-tv-kd13:13.1.12": "And he should ask a second ",
   "pli-tv-kd13:13.1.13": "and a third time. ",
